--- a/DynamicConvexHullCSharpRealization/DynamicConvexHullCSharpRealization/DynamicConvexHullCSharpRealization.csproj
+++ b/DynamicConvexHullCSharpRealization/DynamicConvexHullCSharpRealization/DynamicConvexHullCSharpRealization.csproj
@@ -43,8 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bridge.cs" />
+    <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RedBlackNode.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
