--- a/DynamicConvexHullCSharpRealization/DynamicConvexHullCSharpRealization/DynamicConvexHullCSharpRealization.csproj
+++ b/DynamicConvexHullCSharpRealization/DynamicConvexHullCSharpRealization/DynamicConvexHullCSharpRealization.csproj
@@ -47,7 +47,9 @@
     <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RedBlackNode.cs" />
+    <Compile Include="DynamicConvexHull.cs" />
+    <Compile Include="Treap.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
