--- a/DynamicConvexHullCSharpRealization/DynamicConvexHullCSharpRealization/DynamicConvexHullCSharpRealization.csproj
+++ b/DynamicConvexHullCSharpRealization/DynamicConvexHullCSharpRealization/DynamicConvexHullCSharpRealization.csproj
@@ -44,10 +44,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bridge.cs" />
+    <Compile Include="DynamicConvexHull.cs" />
     <Compile Include="Point.cs" />
+    <Compile Include="PointPosition.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DynamicConvexHull.cs" />
+    <Compile Include="HalfOfDynamicConvexHull.cs" />
+    <Compile Include="RedBlackNode.cs" />
     <Compile Include="Treap.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
