--- a/DynamicConvexHullCSharpRealization/DynamicConvexHullCSharpRealization/DynamicConvexHullCSharpRealization.csproj
+++ b/DynamicConvexHullCSharpRealization/DynamicConvexHullCSharpRealization/DynamicConvexHullCSharpRealization.csproj
@@ -55,14 +55,25 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Xemio.GameLibrary, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Xemio-GameLibrary.0.8.51\lib\net45\Xemio.GameLibrary.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Xemio.GameLibrary.Rendering.GdiPlus, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Xemio-GameLibrary-GDI-Renderer.2.8\lib\net45\Xemio.GameLibrary.Rendering.GdiPlus.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Draw.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="PointPosition.cs" />
     <Compile Include="Program.cs" />
@@ -74,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
